# NASMI

./: .gitignore  LICENCE  app.py  audit_files.txt  config.py  inspect_db.py  pyproject.toml  requirements.txt
application/: application_error.py  assembly_result.py  error_code.py  output_service.py  package_assembler.py  package_generator.py  result.py
archive/: document.py  source.py
audit/: audit_chain.py  audit_entry.py  audit_verifier.py  integrity_result.py  verification_result.py
cognitive/: context_fusion.py  explanation_layer.py  identity_graph.py  life_event_cluster.py  prediction_engine.py
core/: caching.py  constants.py  database.py  document_loader.py  encryption.py  event_bus.py  events.py  exceptions.py  expiry_engine.py  export_engine.py  filesystem.py  guards.py  hashing.py  identifiers.py  identity_core.py  locking.py  logging.py  paths.py  pipeline.py  results.py  retry.py  settings.py  startup.py  state_machine.py  text_extractor.py  time.py  transactions.py  types.py
db/: database.py  models.py  schema.sql
extraction/: candidate_fact.py  extractable_content.py  extraction_request.py  extraction_result.py  extractor.py
forms/: autofill_engine.py  autofill_preview.py  form_field.py  form_mapping.py  form_submission.py  form_template.py  form_type.py  pdf_overlay.py
infrastructure/: container.py
intelligence/: contradiction_engine.py  document_classifier.py  document_parser.py  field_registry.py  field_schema.py  form_detector.py  merge_logic.py  ner_engine.py  ocr_engine.py  provenance_tracker.py  smart_suggest.py
knowledge/: fact.py  (+20 more)
(+265 files in other folders)
